finalized written analysis ipynb.

--- a/mcp_written_analysis.ipynb
+++ b/mcp_written_analysis.ipynb
@@ -11,47 +11,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis of the Correlation Matrix for the San Francisco DataFrames\n",
     "\n",
-    "1. **Drugs_2008 and Prostitution_2008:**\n",
-    "   - The correlation coefficient is 0.442733, indicating a moderate positive correlation between drug-related incidents and prostitution-related incidents in December 2008.\n",
+    "## Hilarious Correlation Chronicles Unveil the Mysteries of San Francisco's Data Dance\n",
     "\n",
-    "2. **Drugs_2008 and Drugs_2017:**\n",
-    "   - Since the correlation coefficient is 1.000000, it suggests a perfect positive correlation between drug-related incidents in December 2008 and December 2017. This could be an artifact of the data or may indicate a consistent trend across the two years.\n",
+    "# Drugs_2008 and Prostitution_2008:\n",
     "\n",
-    "3. **Prostitution_2008 and Drugs_2017:**\n",
-    "   - The correlation coefficient is not available (NaN) due to missing values in the data.\n",
+    "Get ready for the moderate positive correlation shenanigans! The correlation coefficient sashays in at 0.442733, revealing that in December 2008, drug-related incidents and prostitution-related incidents were doing the tango together—moderately, but with undeniable flair.\n",
+    "Drugs_2008 and Drugs_2017:\n",
     "\n",
-    "4. **Prostitution_2008 and Prostitution_2017:**\n",
-    "   - The correlation coefficient is not available (NaN) due to missing values in the data.\n",
+    "Hold onto your data hats because we've got a perfect positive correlation blast-off! The coefficient is a jaw-dropping 1.000000, suggesting that in the magical land of December 2008 and 2017, drug-related incidents are like synchronized swimmers, performing a flawless routine. Is it data magic or just a quirky holiday trend? You decide.\n",
+    "Prostitution_2008 and Drugs_2017:\n",
     "\n",
-    "5. **Drugs_2017 and Prostitution_2017:**\n",
-    "   - The correlation coefficient is -0.014361, indicating a very weak negative correlation between drug-related incidents and prostitution-related incidents in December 2017.\n",
+    "Brace yourselves for a twist in the tale – NaN takes center stage! Unfortunately, the correlation coefficient got lost in the festive hustle, leaving us with a blank slate. It's the mysterious missing link in our data dance drama.\n",
+    "Prostitution_2008 and Prostitution_2017:\n",
     "\n",
-    "**Note:** Correlation does not imply causation. These correlation coefficients only indicate statistical relationships between variables and do not provide insights into the underlying causes. The presence of NaN values may also affect the interpretation, and further exploration of the data and domain knowledge may be needed for a more comprehensive analysis.\n"
+    "Get ready for another NaN-induced cliffhanger! The correlation coefficient is playing hide-and-seek due to missing values. December 2008 and 2017 are keeping the secrets of the correlation between prostitution-related incidents, leaving us hanging in suspense.\n",
+    "Drugs_2017 and Prostitution_2017:\n",
+    "\n",
+    "In a shocking turn of events, we've got a very weak negative correlation making a timid entrance with a coefficient of -0.014361. It's like drug-related incidents and prostitution-related incidents in December 2017 are giving each other the side-eye, not quite on the same festive wavelength.\n",
+    "Note: Before you jump to conclusions, remember – correlation doesn't throw a holiday party for causation. These coefficients are like the dance partners at a masquerade ball; they might look good together, but there's no guarantee they're ordering pizza together after the event. Also, the NaNs decided to play hide-and-seek, adding an extra layer of mystery to our data dance. So, buckle up for the festive statistics rollercoaster, and let the correlation chronicles continue! 🕺💃📊\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis of the Correlation Matrix for the New York DataFrames:\n",
     "\n",
-    "1. **NY_Drugs_2008 and NY_Prostitution_2008:**\n",
-    "   - Correlation coefficient: 0.573262\n",
-    "   - Interpretation: There is a moderate positive correlation (0.573262) between drug-related incidents and prostitution-related incidents in December 2008 in New York.\n",
+    "## The Big Apple's Data Duet: A Comedic Unraveling of New York's Correlation Cabaret\n",
     "\n",
-    "2. **NY_Drugs_2008 and NY_Drugs_2017:**\n",
-    "   - Correlation coefficient: NaN (Not a Number)\n",
-    "   - Interpretation: The correlation coefficient is not available (NaN) because there might be missing or insufficient data for drug-related incidents in December 2017.\n",
+    "# NY_Drugs_2008 and NY_Prostitution_2008:\n",
     "\n",
-    "3. **NY_Prostitution_2008 and NY_Drugs_2017:**\n",
-    "   - Correlation coefficient: NaN (Not a Number)\n",
-    "   - Interpretation: The correlation coefficient is not available (NaN) because there might be missing or insufficient data for prostitution-related incidents in December 2017.\n",
+    "Hold onto your statistical sequins because the correlation coefficient is here to dazzle at 0.573262! In the festive wonderland of December 2008, drug-related incidents and prostitution-related incidents in New York decided to do the cha-cha together with a moderate positive correlation. It's like they're two dance partners who found their rhythm in the city that never sleeps.\n",
     "\n",
-    "4. **NY_Prostitution_2008 and NY_Prostitution_2017:**\n",
-    "   - Correlation coefficient: 0.208845\n",
-    "   - Interpretation: There is a weak positive correlation (0.208845) between prostitution-related incidents in December 2008 and December 2017 in New York."
+    "# NY_Drugs_2008 and NY_Drugs_2017:\n",
+    "\n",
+    "Brace yourselves for a suspenseful twist – NaN (Not a Number) steals the spotlight! The correlation coefficient decided to play hide-and-seek, leaving us with an empty stage and a mysterious gap in the December 2008 to 2017 drug-related incident saga. Perhaps the data took a holiday break or joined a silent meditation retreat.\n",
+    "NY_Prostitution_2008 and NY_Drugs_2017:\n",
+    "\n",
+    "The plot thickens with another NaN revelation! The correlation coefficient goes incognito, hinting at missing or elusive data for prostitution-related incidents in December 2017. It's the missing link in our New York data drama, adding an extra layer of mystery to the correlation cabaret.\n",
+    "NY_Prostitution_2008 and NY_Prostitution_2017:\n",
+    "\n",
+    "Get ready for a weak positive correlation to join the scene with a coefficient of 0.208845! In the grand scheme of December 2008 and 2017, prostitution-related incidents in New York decided to waltz together with a gentle sway. It's like they're the dance partners who decided to keep it light and breezy over the festive seasons.\n",
+    "Note: As we twirl through the correlation cabaret, remember that correlation is like a dance – it may look good, but it doesn't reveal the backstage secrets. NaNs decided to gate-crash our party, leaving us with more questions than answers. So, enjoy the statistical spectacle, keep your laughter ready, and let the correlation cabaret continue in the glittering world of New York data! 🍎💃🕺📊"
    ]
   },
   {
@@ -265,7 +266,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ladies and gentlemen, gather 'round for a momentous journey into the thrilling world of San Francisco's Prostitution Incident Olympics! Yes, you heard it right – we're diving deep into the data trenches to unravel some fun and surprising facts about the evolution of certain, ahem, professional endeavors in the City by the Bay.\n",
+    "## Ladies and gentlemen, gather 'round for a momentous journey into the thrilling world of San Francisco's Prostitution Incident Olympics!\n",
+    "\n",
+    " Yes, you heard it right – we're diving deep into the data trenches to unravel some fun and surprising facts about the evolution of certain, ahem, professional endeavors in the City by the Bay.\n",
     "\n",
     "## Slide 1: \"Prostitution Highlights of 2008\"\n",
     "\n",
@@ -285,6 +288,102 @@
     "## In conclusion;\n",
     "\n",
     " As we analyze these thrilling episodes of yesteryears, let's not forget that behind every statistic is a story waiting to be told. San Francisco's Prostitution scene: where the numbers are as colorful as the city itself. Until next time, stay sassy, San Francisco!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## #2) Hotspots of Celebration: What part of the city boasts the highest probability of discovering a good time?\n",
+    "\n",
+    "Ladies and gentlemen, buckle up for an exhilarating journey through the quirky streets of San Francisco, where we've unearthed the clandestine data gems of celebration and merrymaking! The question of the hour: Where in this vibrant city is the highest probability of stumbling upon a good time? Let's dive into the data, shall we?\n",
+    "\n",
+    "# Slide 1: \"Drug-Infused Dance Floors of 2008\"\n",
+    "\n",
+    "In the thrilling drug category of 2008, our contenders were giving it their all. The districts of MISSION and TENDERLOIN took center stage, with 116 and a jaw-dropping 374 incidents, respectively. It seems like Mission was on a mission, and the Tenderloin was, well, tendering a lot. Bravo, you party animals!\n",
+    "\n",
+    "Meanwhile, other districts made valiant efforts – SOUTHERN with 134 incidents, INGLESIDE with 41, and even the TARAVAL district with a respectable 24. Who knew the tranquil TARAVAL had a wild side?\n",
+    "\n",
+    "# Slide 2: \"Drug Détente in 2017\"\n",
+    "\n",
+    "Fast forward to 2017, and the party had undergone some serious downsizing. MISSION was still trying to keep the spirit alive with 79 incidents, but the once reigning champion TENDERLOIN took a chill pill, with a mere 2 incidents. Oh, how the mighty have mellowed!\n",
+    "# Slide 3: \"Prostitution Prowess of 2008\"\n",
+    "\n",
+    "Now, let's talk about the oldest profession in the world – Prostitution in 2008. TENDERLOIN, not just content with its drug escapades, hosted a whopping 68 incidents. Bravo, Tenderloin, keeping the streets lively in more ways than one!\n",
+    "\n",
+    "SOUTHERN and MISSION districts also showed their prowess in the party game, with 85 and 43 incidents, respectively. Apparently, SOUTHERN wasn't just Southern; it was sizzling!\n",
+    "\n",
+    "# Slide 4: \"Prostitution Peek-a-Boo in 2017\"\n",
+    "\n",
+    "Fast forward again to 2017, and it seems the Prostitution party was making a covert comeback. TARAVAL district, the dark horse, emerged with 30 incidents, showing that every district has a story to tell.\n",
+    "\n",
+    "# In conclusion;\n",
+    "\n",
+    " when it comes to the hotspots of celebration in San Francisco, TENDERLOIN in 2008 takes the crown for a wild and unforgettable ride. As for 2017, well, let's just say the city collectively decided to take a breather. So, if you're on the lookout for a good time, keep your eyes peeled in the nooks and crannies of Tenderloin or the unexpected corners of Taraval – you might just stumble upon a celebration waiting to happen! Stay groovy, San Francisco!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9) \n",
+    "## Extrapolation of NYC and SF's Data Dance: Drugs & Prostitution (2008 & 2017)\n",
+    "\n",
+    "Ladies and Gentlemen, brace yourselves for the comedic rollercoaster of NYC and SF's data shenanigans! We're delving into the world of drug and prostitution activities – because nothing says \"fun\" like statistical mischief!\n",
+    "\n",
+    "# 1. NYC Drug Disco:\n",
+    "\n",
+    "2017: Picture this – NYC's drug activity is on a wild slide down the statistical dance floor at a slope of -2.12. It's like the numbers are doing the limbo! The intercept at 134.31 is the DJ dropping the beat, setting the vibe for the month. With an R-squared of 0.18, it's a moderate relationship, and the P-value of 0.02 screams, \"Statistical significance, baby!\"\n",
+    "\n",
+    "# 2. NYC Prostitution Theater:\n",
+    "\n",
+    "2008: NYC's prostitution incidents are like Broadway stars taking their bows. The slope of -0.60 suggests a decline in drama. The intercept at 22.63 sets the stage, and the R-squared of 0.14 is like the audience's applause – moderate, but not a standing ovation. The P-value of 0.05 says, \"Is it significant? Kinda, sorta!\"\n",
+    "\n",
+    "2017: The prostitution plot thickens with a slope of -0.22. It's like a plot twist – decreasing incidents with a low R-squared of 0.02, implying a relationship that's more 'it's complicated' than 'happily ever after.' The P-value of 0.51 says, \"Not significant, darling!\"\n",
+    "\n",
+    "# 3. SF Drug Disco Fever:\n",
+    "\n",
+    "2008: SF's drug activity is doing the funky chicken with a slope of -0.46. The intercept at 34.43 sets the tone, and the R-squared of 0.13 is like a groovy relationship. The P-value of 0.05 says, \"Statistical groove is on!\"\n",
+    "\n",
+    "2017: SF's drug scene in 2017 is like a confusing dance – a slight slope of 0.08, a low R-squared of 0.02, and a P-value of 0.44, which means it's statistically saying, \"I'm not sure where this dance is going!\"\n",
+    "\n",
+    "# 4. SF Prostitution Vaudeville:\n",
+    "\n",
+    "2008: SF's prostitution incidents are like a silent movie – a slope of -0.06, a weak relationship, and a P-value of 0.43 saying, \"Is it really a significant plot twist?\"\n",
+    "\n",
+    "2017: SF's prostitution drama continues with a slope of -0.80. It's like a soap opera – dramatic, with a moderate relationship (R-squared of 0.14), but the P-value of 0.23 whispers, \"It's not statistically juicy, folks!\"\n",
+    "\n",
+    "## In Conclusion:\n",
+    "\n",
+    "The statistical dance of NYC and SF is a carnival of numbers and plots, with highs, lows, and a few awkward dance moves. Remember, in the realm of data disco, sometimes the statistical twist and turns are just as entertaining as the actual insights! Keep grooving, data enthusiasts! 🕺💃"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#7) \n",
+    "## Coastal Chronicles Showdown: East Coast vs. West Coast Festive Frenzy!\n",
+    "\n",
+    "Ladies and Gentlemen, welcome to the epic Coastal Chronicles showdown where we dive into the data, dissect the dynamics, and unravel the mysteries of festive fun on the East Coast and West Coast. Brace yourselves for a side-splitting analysis of gangsta merriment, because when it comes to revelry, it's not just about who's got swag but who's got the swagger in their festive fun.\n",
+    "\n",
+    "# **1. Drug Shenanigans: East Coast Swagger vs. West Coast Cool\n",
+    "\n",
+    "NYC vs. SF (2008 & 2017): In the realm of drug-related escapades, both NYC and SF showcased their unique dance moves. NYC, with its significant decrease in drug activity over the month, set the tone for a more subdued groove. SF, on the other hand, presented mixed signals, hinting at changes in the rhythm. The verdict? NYC might have the swagger in slowing things down, but SF adds a dash of unpredictability to the West Coast cool.\n",
+    "\n",
+    "# **2. Prostitution Chronicles: East Coast Elegance vs. West Coast Whimsy\n",
+    "\n",
+    "NYC vs. SF (2008 & 2017): Prostitution-related antics took center stage as we witnessed the cheeky chronicles of NYC and SF's rendezvous. NYC, with its fluctuations in incidents, displayed a certain elegance in its weekday whimsies. SF, however, embraced the unpredictable, with days often questioning their own midweek prowess. The verdict? NYC brings the elegance, but SF adds a touch of West Coast whimsy to the festivities.\n",
+    "\n",
+    "# **3. Optimal Days for Festive Fun: East Coast Extravaganza vs. West Coast Whirlwind\n",
+    "\n",
+    "NYC vs. SF (Drugs & Prostitution - 2008 & 2017): When it comes to pinpointing the optimal days for feel-good family fun, the days of the week became battlegrounds for revelry. NYC's Tuesday emerged as the true titan of temptation, while SF's Wednesday decided to be the whirlwind of wonders. The verdict? NYC's got the East Coast extravaganza with Tuesday's triumph, but SF adds a whirlwind twist to the West Coast's midweek merriment.\n",
+    "\n",
+    "##In Conclusion:\n",
+    "\n",
+    "As we wrap up the Coastal Chronicles, it's clear that both coasts bring their A-game to the festive frenzy. NYC, with its elegant rhythms and calculated moves, stands as the epitome of East Coast sophistication. Meanwhile, SF, with its unpredictable twists and laid-back vibes, embodies the carefree spirit of the West Coast.\n",
+    "\n",
+    "So, whose gangstas have the most festive fun? It's a tie! The East Coast and West Coast both bring their unique swagger to the celebration, proving that in the grand dance of Coastal Chronicles, everyone's a winner in the game of gangsta festivities! 🎉🌊🕺💃"
    ]
   }
  ],
