--- a/CG_geospacial.ipynb
+++ b/CG_geospacial.ipynb
@@ -150,20 +150,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/2255486336.py:29: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
+      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/669134566.py:29: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
       "  folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_drugs_dec_2008)\n",
-      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/2255486336.py:49: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
+      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/669134566.py:49: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
       "  folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_drugs_dec_2017)\n",
-      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/2255486336.py:69: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
-      "  folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_prostitution_dec_2008)\n",
-      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/2255486336.py:89: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
+      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/669134566.py:89: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
       "  folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_prostitution_dec_2017)\n"
      ]
     }
@@ -197,7 +195,7 @@
     "    if(row['pd_district'] == 'RICHMOND'):\n",
     "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"purple\")).add_to(map_sf_drugs_dec_2008)\n",
     "    if(row['pd_district'] == 'SOUTHERN'):\n",
-    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_drugs_dec_2008)\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"black\")).add_to(map_sf_drugs_dec_2008)\n",
     "    if(row['pd_district'] == 'TARAVAL'):\n",
     "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"darkgreen\")).add_to(map_sf_drugs_dec_2008)\n",
     "    if(row['pd_district'] == 'TENDERLOIN'):\n",
@@ -217,7 +215,7 @@
     "    if(row['pd_district'] == 'RICHMOND'):\n",
     "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"purple\")).add_to(map_sf_drugs_dec_2017)\n",
     "    if(row['pd_district'] == 'SOUTHERN'):\n",
-    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_drugs_dec_2017)\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"black\")).add_to(map_sf_drugs_dec_2017)\n",
     "    if(row['pd_district'] == 'TARAVAL'):\n",
     "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"darkgreen\")).add_to(map_sf_drugs_dec_2017)\n",
     "    if(row['pd_district'] == 'TENDERLOIN'):\n",
@@ -237,7 +235,7 @@
     "    if(row['pd_district'] == 'RICHMOND'):\n",
     "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"purple\")).add_to(map_sf_prostitution_dec_2008)\n",
     "    if(row['pd_district'] == 'SOUTHERN'):\n",
-    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_prostitution_dec_2008)\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"black\")).add_to(map_sf_prostitution_dec_2008)\n",
     "    if(row['pd_district'] == 'TARAVAL'):\n",
     "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"darkgreen\")).add_to(map_sf_prostitution_dec_2008)\n",
     "    if(row['pd_district'] == 'TENDERLOIN'):\n",
@@ -257,7 +255,7 @@
     "    if(row['pd_district'] == 'RICHMOND'):\n",
     "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"purple\")).add_to(map_sf_prostitution_dec_2017)\n",
     "    if(row['pd_district'] == 'SOUTHERN'):\n",
-    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_prostitution_dec_2017)\n",
+    "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"black\")).add_to(map_sf_prostitution_dec_2017)\n",
     "    if(row['pd_district'] == 'TARAVAL'):\n",
     "        folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"darkgreen\")).add_to(map_sf_prostitution_dec_2017)\n",
     "    if(row['pd_district'] == 'TENDERLOIN'):\n",
@@ -266,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
