Added intro, edited the analysis write up

--- a/mcp_written_analysis.ipynb
+++ b/mcp_written_analysis.ipynb
@@ -11,8 +11,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Title: \"Hookers-and-Blow-A-Case-Study-of-Holiday-Cheer!\" \n",
     "\n",
-    "## Hilarious Correlation Chronicles Unveil the Mysteries of San Francisco's Data Dance\n",
+    "Ladies and Gentlemen, Revelers and Analysts, welcome to \"The Data Masquerade,\" where numbers don their festive attire and dance in the dazzling spotlight of analysis. Tonight, we embark on a whimsical journey through the statistical landscapes of New York City (NYC) and San Francisco (SF), unraveling the mysteries of Hookers and Blow.\n",
+    "\n",
+    "In this data-driven carnival, we'll explore the comical correlations, playful patterns, and unexpected twists hidden within the heartbeats of NYC and SF's bustling urban rhythms. From drug-related dramas to the mischievous masquerade of prostitution incidents, each datapoint tells a story—a story of two cities, each with its unique flair for celebration.\n",
+    "\n",
+    "Buckle up for a journey where numbers transform into dancers, correlation coefficients waltz across the screen, and missing values play hide-and-seek in the festive data. As we lift the curtain on the Coastal Chronicles and the Big Apple's Data Duet, prepare to be entertained, informed, and perhaps amused by the quirks and tales these datasets have to share.\n",
+    "\n",
+    "Without further ado, let the festivites begin! 🎭🕺💃"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Correlation Chronicles Unveil the Mysteries of San Francisco's Data Dance\n",
     "\n",
     "# Drugs_2008 and Prostitution_2008:\n",
     "\n",
@@ -37,7 +52,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## The Big Apple's Data Duet: A Comedic Unraveling of New York's Correlation Cabaret\n",
+    "## The Big Apple's Data Duet: Unraveling New York's Correlation Cabaret:\n",
     "\n",
     "# NY_Drugs_2008 and NY_Prostitution_2008:\n",
     "\n",
