added out questions to the write-up

--- a/mcp_written_analysis.ipynb
+++ b/mcp_written_analysis.ipynb
@@ -26,6 +26,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Title: \"Hookers and Blow: A Hilarious Holiday Dive into Festivities\"\n",
+    "\n",
+    "1) The Day the Fun Decided to Show Up: Which day of the week is the VIP guest at the Feel-Good Family Fiesta?\n",
+    "\n",
+    "2) City Hotspots: Where in the Urban Jungle Can You Unearth the Most Fun?\n",
+    "\n",
+    "3) Cheer Overload: When Does the Seasonal Spirit Go into Turbo Mode?\n",
+    "\n",
+    "4) East Coast Swagger vs. West Coast Cool: Whose Gangstas Rule the Festive Realm?\n",
+    "\n",
+    "5) District Showdown: Where's the Happening Hood in Town?\n",
+    "\n",
+    "6) Regression Blues: When the Numbers Decide to Take a Month-Long Sigh.\n",
+    "\n",
+    "## Other Questions the Data and Write-up Have Covered:\n",
+    "\n",
+    "1) The Evolution of Incidents: How Have Festive Activities Changed from 2008 to 2017?\n",
+    "\n",
+    "2) Incidents vs. Population: Is the Festive Fun Per Capita Really a Numbers Game?\n",
+    "\n",
+    "3) Weekend Warriors: Are Saturdays and Sundays the True Heroes of Holiday Merriment?\n",
+    "\n",
+    "4) Seasonal Swings: Do Festivities Peak During Specific Months of the Year?\n",
+    "\n",
+    "6) Demographic Dynamics: Does Age Play a Role in Embracing the Holiday Spirit?\n",
+    "\n",
+    "6) Law Enforcement Priorities: How Have Policing Approaches Shaped Festive Incidents?\n",
+    "\n",
+    "7) The Price of Merriment: Does Festive Fun Come with a Price Tag, and How Has It Changed Over the Years?\n",
+    "\n",
+    "8) Population vs. Incidents: Is There a Correlation Between Urban Density and Festive Shenanigans?\n",
+    "\n",
+    "9) Climate and Celebrations: Does Weather Affect the Frequency of Festive Activities?\n",
+    "\n",
+    "As we continue our merry statistical exploration, let the questions evolve, the data entertain, and the festive fun unfold! 🎉📊"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Correlation Chronicles Unveil the Mysteries of San Francisco's Data Dance\n",
     "\n",
