removed excess code

--- a/mcp_written_analysis.ipynb
+++ b/mcp_written_analysis.ipynb
@@ -582,98 +582,8 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n## The Big Apple's Data Duet: Unraveling New York's Correlation Cabaret:\\n\\n# NY_Drugs_2008 and NY_Prostitution_2008:\\n\\nHold onto your statistical sequins because the correlation coefficient is here to dazzle at 0.573262! In the festive wonderland of December 2008, drug-related incidents and prostitution-related incidents in New York decided to do the cha-cha together with a moderate positive correlation. It's like they're two dance partners who found their rhythm in the city that never sleeps.\\n\\n# NY_Drugs_2008 and NY_Drugs_2017:\\n\\nBrace yourselves for a suspenseful twist – NaN (Not a Number) steals the spotlight! The correlation coefficient decided to play hide-and-seek, leaving us with an empty stage and a mysterious gap in the December 2008 to 2017 drug-related incident saga. Perhaps the data took a holiday break or joined a silent meditation retreat.\\nNY_Prostitution_2008 and NY_Drugs_2017:\\n\\nThe plot thickens with another NaN revelation! The correlation coefficient goes incognito, hinting at missing or elusive data for prostitution-related incidents in December 2017. It's the missing link in our New York data drama, adding an extra layer of mystery to the correlation cabaret.\\nNY_Prostitution_2008 and NY_Prostitution_2017:\\n\\nGet ready for a weak positive correlation to join the scene with a coefficient of 0.208845! In the grand scheme of December 2008 and 2017, prostitution-related incidents in New York decided to waltz together with a gentle sway. It's like they're the dance partners who decided to keep it light and breezy over the festive seasons.\\nNote: As we twirl through the correlation cabaret, remember that correlation is like a dance – it may look good, but it doesn't reveal the backstage secrets. NaNs decided to gate-crash our party, leaving us with more questions than answers. So, enjoy the statistical spectacle, keep your laughter ready, and let the correlation cabaret continue in the glittering world of New York data! 🍎💃🕺📊\""
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "'''\n",
-    "## The Big Apple's Data Duet: Unraveling New York's Correlation Cabaret:\n",
-    "\n",
-    "# NY_Drugs_2008 and NY_Prostitution_2008:\n",
-    "\n",
-    "Hold onto your statistical sequins because the correlation coefficient is here to dazzle at 0.573262! In the festive wonderland of December 2008, drug-related incidents and prostitution-related incidents in New York decided to do the cha-cha together with a moderate positive correlation. It's like they're two dance partners who found their rhythm in the city that never sleeps.\n",
-    "\n",
-    "# NY_Drugs_2008 and NY_Drugs_2017:\n",
-    "\n",
-    "Brace yourselves for a suspenseful twist – NaN (Not a Number) steals the spotlight! The correlation coefficient decided to play hide-and-seek, leaving us with an empty stage and a mysterious gap in the December 2008 to 2017 drug-related incident saga. Perhaps the data took a holiday break or joined a silent meditation retreat.\n",
-    "NY_Prostitution_2008 and NY_Drugs_2017:\n",
-    "\n",
-    "The plot thickens with another NaN revelation! The correlation coefficient goes incognito, hinting at missing or elusive data for prostitution-related incidents in December 2017. It's the missing link in our New York data drama, adding an extra layer of mystery to the correlation cabaret.\n",
-    "NY_Prostitution_2008 and NY_Prostitution_2017:\n",
-    "\n",
-    "Get ready for a weak positive correlation to join the scene with a coefficient of 0.208845! In the grand scheme of December 2008 and 2017, prostitution-related incidents in New York decided to waltz together with a gentle sway. It's like they're the dance partners who decided to keep it light and breezy over the festive seasons.\n",
-    "Note: As we twirl through the correlation cabaret, remember that correlation is like a dance – it may look good, but it doesn't reveal the backstage secrets. NaNs decided to gate-crash our party, leaving us with more questions than answers. So, enjoy the statistical spectacle, keep your laughter ready, and let the correlation cabaret continue in the glittering world of New York data! 🍎💃🕺📊'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n## Correlation Chronicles Unveil the Mysteries of San Francisco's Data Dance\\n\\n# Drugs_2008 and Prostitution_2008:\\n\\nGet ready for the moderate positive correlation shenanigans! The correlation coefficient sashays in at 0.442733, revealing that in December 2008, drug-related incidents and prostitution-related incidents were doing the tango together—moderately, but with undeniable flair.\\nDrugs_2008 and Drugs_2017:\\n\\nHold onto your data hats because we've got a perfect positive correlation blast-off! The coefficient is a jaw-dropping 1.000000, suggesting that in the magical land of December 2008 and 2017, drug-related incidents are like synchronized swimmers, performing a flawless routine. Is it data magic or just a quirky holiday trend? You decide.\\nProstitution_2008 and Drugs_2017:\\n\\nBrace yourselves for a twist in the tale – NaN takes center stage! Unfortunately, the correlation coefficient got lost in the festive hustle, leaving us with a blank slate. It's the mysterious missing link in our data dance drama.\\nProstitution_2008 and Prostitution_2017:\\n\\nGet ready for another NaN-induced cliffhanger! The correlation coefficient is playing hide-and-seek due to missing values. December 2008 and 2017 are keeping the secrets of the correlation between prostitution-related incidents, leaving us hanging in suspense.\\nDrugs_2017 and Prostitution_2017:\\n\\nIn a shocking turn of events, we've got a very weak negative correlation making a timid entrance with a coefficient of -0.014361. It's like drug-related incidents and prostitution-related incidents in December 2017 are giving each other the side-eye, not quite on the same festive wavelength.\\nNote: Before you jump to conclusions, remember – correlation doesn't throw a holiday party for causation. These coefficients are like the dance partners at a masquerade ball; they might look good together, but there's no guarantee they're ordering pizza together after the event. Also, the NaNs decided to play hide-and-seek, adding an extra layer of mystery to our data dance. So, buckle up for the festive statistics rollercoaster, and let the correlation chronicles continue! 🕺💃📊\\n\\n# Analysis of the Correlation Matrix for the New York DataFrames:\\n\\n1. **NY_Drugs_2008 and NY_Prostitution_2008:**\\n- Correlation coefficient: 0.573262\\n- Interpretation: There is a moderate positive correlation (0.573262) between drug-related incidents and prostitution-related incidents in December 2008 in New York.\\n\\n2. **NY_Drugs_2008 and NY_Drugs_2017:**\\n- Correlation coefficient: NaN (Not a Number)\\n- Interpretation: The correlation coefficient is not available (NaN) because there might be missing or insufficient data for drug-related incidents in December 2017.\\n\\n3. **NY_Prostitution_2008 and NY_Drugs_2017:**\\n- Correlation coefficient: NaN (Not a Number)\\n- Interpretation: The correlation coefficient is not available (NaN) because there might be missing or insufficient data for prostitution-related incidents in December 2017.\\n\\n4. **NY_Prostitution_2008 and NY_Prostitution_2017:**\\n- Correlation coefficient: 0.208845\\n- Interpretation: There is a weak positive correlation (0.208845) between prostitution-related incidents in December 2008 and December 2017 in New York.\""
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "## Correlation Chronicles Unveil the Mysteries of San Francisco's Data Dance\n",
-    "\n",
-    "# Drugs_2008 and Prostitution_2008:\n",
-    "\n",
-    "Get ready for the moderate positive correlation shenanigans! The correlation coefficient sashays in at 0.442733, revealing that in December 2008, drug-related incidents and prostitution-related incidents were doing the tango together—moderately, but with undeniable flair.\n",
-    "Drugs_2008 and Drugs_2017:\n",
-    "\n",
-    "Hold onto your data hats because we've got a perfect positive correlation blast-off! The coefficient is a jaw-dropping 1.000000, suggesting that in the magical land of December 2008 and 2017, drug-related incidents are like synchronized swimmers, performing a flawless routine. Is it data magic or just a quirky holiday trend? You decide.\n",
-    "Prostitution_2008 and Drugs_2017:\n",
-    "\n",
-    "Brace yourselves for a twist in the tale – NaN takes center stage! Unfortunately, the correlation coefficient got lost in the festive hustle, leaving us with a blank slate. It's the mysterious missing link in our data dance drama.\n",
-    "Prostitution_2008 and Prostitution_2017:\n",
-    "\n",
-    "Get ready for another NaN-induced cliffhanger! The correlation coefficient is playing hide-and-seek due to missing values. December 2008 and 2017 are keeping the secrets of the correlation between prostitution-related incidents, leaving us hanging in suspense.\n",
-    "Drugs_2017 and Prostitution_2017:\n",
-    "\n",
-    "In a shocking turn of events, we've got a very weak negative correlation making a timid entrance with a coefficient of -0.014361. It's like drug-related incidents and prostitution-related incidents in December 2017 are giving each other the side-eye, not quite on the same festive wavelength.\n",
-    "Note: Before you jump to conclusions, remember – correlation doesn't throw a holiday party for causation. These coefficients are like the dance partners at a masquerade ball; they might look good together, but there's no guarantee they're ordering pizza together after the event. Also, the NaNs decided to play hide-and-seek, adding an extra layer of mystery to our data dance. So, buckle up for the festive statistics rollercoaster, and let the correlation chronicles continue! 🕺💃📊\n",
-    "\n",
-    "# Analysis of the Correlation Matrix for the New York DataFrames:\n",
-    "\n",
-    "1. **NY_Drugs_2008 and NY_Prostitution_2008:**\n",
-    "- Correlation coefficient: 0.573262\n",
-    "- Interpretation: There is a moderate positive correlation (0.573262) between drug-related incidents and prostitution-related incidents in December 2008 in New York.\n",
-    "\n",
-    "2. **NY_Drugs_2008 and NY_Drugs_2017:**\n",
-    "- Correlation coefficient: NaN (Not a Number)\n",
-    "- Interpretation: The correlation coefficient is not available (NaN) because there might be missing or insufficient data for drug-related incidents in December 2017.\n",
-    "\n",
-    "3. **NY_Prostitution_2008 and NY_Drugs_2017:**\n",
-    "- Correlation coefficient: NaN (Not a Number)\n",
-    "- Interpretation: The correlation coefficient is not available (NaN) because there might be missing or insufficient data for prostitution-related incidents in December 2017.\n",
-    "\n",
-    "4. **NY_Prostitution_2008 and NY_Prostitution_2017:**\n",
-    "- Correlation coefficient: 0.208845\n",
-    "- Interpretation: There is a weak positive correlation (0.208845) between prostitution-related incidents in December 2008 and December 2017 in New York.'''\n"
+    "# Fin"
    ]
   },
   {
